<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="90dp">

        <CheckBox
            android:id="@+id/chkBoxGorras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gorras" />

        <CheckBox
            android:id="@+id/chkBoxBañadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ba_adores" />

        <CheckBox
            android:id="@+id/chkBoxCamisetas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camisetas" />

        <CheckBox
            android:id="@+id/chkBoxZapatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zapatos" />

        <CheckBox
            android:id="@+id/chkBoxPantalones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pantalones" />

        <CheckBox
            android:id="@+id/chkBoxLibros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libros" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/peso_0_kg"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnVaciarMochila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/VaciarMochila"
        android:text="@string/vaciar_mochila" />

</LinearLayout>